// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToggleButton /> should render without a problem 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  height: 2rem;
  vertical-align: middle;
  cursor: pointer;
}

<div
  className="c0"
  onClick={[Function]}
>
  <styled.input
    checked={false}
    readOnly={true}
    type="checkbox"
  />
  <styled.span
    checked={false}
    readOnly={false}
  />
</div>
`;

exports[`<ToggleButton /> should render without a problem when checked and disabled 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  height: 2rem;
  vertical-align: middle;
  cursor: not-allowed;
}

<div
  className="c0"
  onClick={[Function]}
>
  <styled.input
    checked={true}
    readOnly={true}
    type="checkbox"
  />
  <styled.span
    checked={true}
    readOnly={true}
  />
</div>
`;

exports[`<ToggleButton /> should render without a problem when checked and not disabled 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  height: 2rem;
  vertical-align: middle;
  cursor: pointer;
}

<div
  className="c0"
  onClick={[Function]}
>
  <styled.input
    checked={true}
    readOnly={true}
    type="checkbox"
  />
  <styled.span
    checked={true}
    readOnly={false}
  />
</div>
`;

exports[`<ToggleButton /> should render without a problem when unchecked and disabled 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  height: 2rem;
  vertical-align: middle;
  cursor: not-allowed;
}

<div
  className="c0"
  onClick={[Function]}
>
  <styled.input
    checked={false}
    readOnly={true}
    type="checkbox"
  />
  <styled.span
    checked={false}
    readOnly={true}
  />
</div>
`;

exports[`<ToggleButton /> should render without a problem when unchecked and not disabled 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  height: 2rem;
  vertical-align: middle;
  cursor: pointer;
}

<div
  className="c0"
  onClick={[Function]}
>
  <styled.input
    checked={false}
    readOnly={true}
    type="checkbox"
  />
  <styled.span
    checked={false}
    readOnly={false}
  />
</div>
`;
